--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,8 @@
     <string name="news_1">No Latest News</string>
     <string name="news_2">Internet Connection Error</string>
     <string name="news_3">No More News</string>
+    <string name="notifications">Notifications</string>
+    <string name="hd_images">HD Images</string>
+    <string name="night_mode">Night Mode</string>
 
 </resources>
